Remove unused code
Signed-off-by: utzcoz <utzcoz@outlook.com>